// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders header with title 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <Touchable
    borderlessRipple={false}
    disabled={false}
    onPress={[Function]}
    rippleColor="rgba(0, 0, 0, .32)"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 40,
          "lineHeight": 40,
          "marginTop": -10,
          "textAlign": "center",
        }
      }
    >
      <DummyTranslation
        id="×"
      />
    </Text>
  </Touchable>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "textAlign": "center",
          "textShadowColor": "#000",
          "textShadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "textShadowRadius": 2,
        }
      }
    >
      <DummyTranslation
        id="Hotel Name"
      />
    </Text>
    <Text
      style={
        Object {
          "color": "grey",
          "fontSize": 12,
          "textAlign": "center",
        }
      }
    >
      <Translation
        id="Hotels.Gallery.Pagination"
        values={
          Object {
            "photoNumber": 2,
            "totalPhotos": 42,
          }
        }
      />
    </Text>
  </Component>
  <Component
    style={
      Object {
        "width": 50,
      }
    }
  />
</Component>
`;

exports[`renders header with very long title 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <Touchable
    borderlessRipple={false}
    disabled={false}
    onPress={[Function]}
    rippleColor="rgba(0, 0, 0, .32)"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 40,
          "lineHeight": 40,
          "marginTop": -10,
          "textAlign": "center",
        }
      }
    >
      <DummyTranslation
        id="×"
      />
    </Text>
  </Touchable>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "textAlign": "center",
          "textShadowColor": "#000",
          "textShadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "textShadowRadius": 2,
        }
      }
    >
      <DummyTranslation
        id="Hotel Name So Long That It Will Not Fit One Line And Needs To Be Wrapped"
      />
    </Text>
    <Text
      style={
        Object {
          "color": "grey",
          "fontSize": 12,
          "textAlign": "center",
        }
      }
    >
      <Translation
        id="Hotels.Gallery.Pagination"
        values={
          Object {
            "photoNumber": 2,
            "totalPhotos": 42,
          }
        }
      />
    </Text>
  </Component>
  <Component
    style={
      Object {
        "width": 50,
      }
    }
  />
</Component>
`;
